# agent-gadget

./: .antigravityignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  GEMINI-COMPACT.md  GEMINI.md  GROUND_RULES.md  README.md  design_report.md  pyproject.toml  research_report.md  review_report.md
.agents/: scripts  skills  workflows
brain/: design_report.md  review_report.md
docs/: PRD.md  architecture.md
docs/features/: audit.md  design.md  gh-issue.md  handle-issue.md  nobot.md  pr-create.md  research.md  review.md
docs/kb/: git.md
src/gadget/: AGENTS.md  GROUND_RULES.md  __init__.py  cli.py
src/gadget.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/gadget/scripts/: handle-issue.sh
src/gadget/skills/audit/: SKILL.md
src/gadget/skills/auto-research/: SKILL.md
src/gadget/skills/design/: SKILL.md
src/gadget/skills/gh-issue/: SKILL.md
src/gadget/skills/issue/: SKILL.md
src/gadget/skills/nobot/: SKILL.md
src/gadget/skills/nobot/scripts/: coupang_simulator.py
src/gadget/skills/pr-create/scripts/: pr-create.sh
src/gadget/skills/research/: SKILL.md
src/gadget/skills/review/: SKILL.md
src/gadget/workflows/: handle-issue.md
src/skills/github-issue/: SKILL.md
src/skills/review/: SKILL.md
src/skills/stats/: SKILL.md
tests/: test_dummy.py
