[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gadget"
version = "0.1.0"
description = "An agent-first development framework operating on rule → document → code dependency direction"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
gadget = "gadget.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "playwright"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["**/*.md", "**/*.yaml", "**/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
